use case still up for review

--- a/Content/SongScanner/useCases.tex
+++ b/Content/SongScanner/useCases.tex
@@ -4,8 +4,8 @@ The following are the user stores used for the Song Scanner.
 \story{Locate music files on device.}{High}
 {As a user, I, want the application to search the directories I specify for music files.}
 {\begin{itemize}
-\item When I start the application, it finds the music files stored in /sdcard/Music.
-\Kristian{skal det ikke være et criteria at man kan tilføje dirs?}
+\item When I start the application for the first time, it finds the music files stored in /sdcard/Music.
+\item I can add or remove to the directories the application searches for music files.
 \end{itemize}}
 
 \story{Obtain beats-per-minute for song.}{High}
