todo and minor correction

--- a/Content/Iteration/introduction.tex
+++ b/Content/Iteration/introduction.tex
@@ -1,12 +1,12 @@
 Over the course of this project we have been working in iterations of two weeks, which is approximately one week worth of work on the project. To follow the practice \textit{small releases} there is one release for every two iterations. In this chapter we will cover the goals and findings of each release and iteration.
 
-In this project we decided to work with a subset of Essence from \citet{essence:config}. Essence is a methodology rooted in the \textit{Pragmatic Paradigm}, as opposed to the agile or traditional paradigm. Essence is a response to a hyper-complex world view, were the context is constantly evolving and there is no single best criteria to evaluate the product. Essence focuses in creating value for the customer, this is done by facilitating innovative processes. Essence relies on an iterative workflow and adds an extra layer wherein evaluation of the process is done. 
+In this project we decided to work with a subset of Essence from \citet{essence:config}. Essence is a methodology rooted in the \textit{Pragmatic Paradigm}, as opposed to the agile or traditional paradigm. Essence is a response to a hyper-complex world view, were the context is constantly evolving and there is no single best criteria to evaluate the product. Essence focuses on creating value for the customer, this is done by facilitating innovative processes. Essence relies on an iterative workflow and adds an extra layer wherein evaluation of the process is done. 
 
 We look to essence to evaluate our use of XP practise, this is done by review/retrospective after each iteration.
 
-Further we describe our releases with Essence configurations. In Essence a configuration is a look at the product after a iteration, you then move from configuration to configuration as you go though the iterations. 
+Further we describe our releases with Essence configurations. In Essence, a configuration is a look at the product after an iteration, you then move from configuration to configuration as you go though the iterations. 
 
-There are four view in Essence each with a  focus: 
+There are four views in Essence, each with a focus: 
 \begin{itemize}
 \item \texttt{Paradigm}: Challenge from a user perspective.
 \item \texttt{Product}: Design of the product.
