--- a/Content/Iteration/1stIteration.tex
+++ b/Content/Iteration/1stIteration.tex
@@ -8,7 +8,7 @@ Some times we found that pair programming was a hindrance for our work, and this
 
 At this stage in the project, practices were still being adapted, and that lead to certain aspects of the process still being relatively unorganised. Similarly, we were under the impression that refactoring was something we did not have to think about yet -- so we did not. It gave us one less thing to think about, but it also resulted in us leaving bad smells behind, that could have been caught early on.
 
-At the end of the iteration we evaluated our planning, and we found that our estimation of trivial issues (i.e., issues we already knew how to solve and that did not need more than a couple of hours) were fine. On more complex issues, on the other hand, we had trouble, and sometimes we had spend twice as much time as anticipated. This was often the case because the issues required a lot of research or simply were more complex than expected, but on the bright side it gave us some experience we could use for planning the next iterations. We also noted that we worked more hours than expected, but this was not a surprise, as our expectations were set purely based on feeling with no previous experience.
+At the end of the iteration we evaluated our planning, and we found that our estimation of trivial issues (i.e., issues we already knew how to solve and that did not need more than a couple of hours of work), were fine. On more complex issues, on the other hand, we had trouble, and sometimes we had spend twice as much time as anticipated. This was often the case because the issues required a lot of research or simply were more complex than expected, but on the bright side it gave us some experience we could use for planning the next iterations. We also noted that we worked more hours than expected, but this was not a surprise, as our expectations were set purely based on feeling with no previous experience.
 
 
 %\begin{itemize}
