impl stepcoutner review

--- a/Content/StepCounter/implementation.tex
+++ b/Content/StepCounter/implementation.tex
@@ -1,4 +1,7 @@
 \section{Implementation}
+The Step counter is implemented as a single class extending the \texttt{Service} class in Android. The service is started and bound from the \texttt{MusicPlayerActivity}, meaning in our implementation it is launched and closed together with the \texttt{MusicPlayerActivity}. On its creation the \texttt{StepCounterService} registers the accelerometer sensor in order to read data required for step detection.
+
+
 \subsection{Step Detection}\label{sec:stepCnt}
 To determine whether a step is taken, the approach taken by \citet{zhao:pedometer} is implemented. Our implementation first calculates a threshold, which corresponds to the threshold line in \Cref{fig:zhaoGraph}. The threshold is calculated by subtracting the minimum accelerometer measurement from maximum measurement, from the array where the measurements are stored.
 
@@ -13,13 +16,15 @@ Our implementation utilises an sensitivity limit so measurements which are very 
   \caption{A acceleration plot from \citet[p. 2]{zhao:pedometer} showing filtered data from a pedometer worn by a person walking}
   \label{fig:zhaoGraph}
 \end{figure}
+
+
 \subsection{Calculation of Steps Per Minute}
-The number of steps taken are used to calculate the number of steps the user takes per minute (SPM).\\
+The gab between steps are used to calculate the number of steps the user takes per minute (SPM).
 
-First, the amplitude is calculated which represents the change x, y, z values obtained from the accelerometer. The formula used for this is $$amplitude = \sqrt{x^{2} + y^{2} + z^{2}}$$\\
+First, the amplitude is calculated which represents the change x, y, z values obtained from the accelerometer. The formula used for this is $$amplitude = \sqrt{x^{2} + y^{2} + z^{2}}$$
 
-The array containing accelerometer measurement data is then updated with the newly calculated value. The data in this array is used for determining whether a step is taken or not, the implementation of which is described in \Cref{sec:stepCnt}.\\
+The array containing accelerometer measurement data is then updated with the newly calculated value. The data in this array is used for determining whether a step is taken or not, the implementation of which is described in \Cref{sec:stepCnt}.
 
-If we detect a step we look when the previous step was taken and calculate SPM from that, this value is then stored in the array containing the SPM measurements. Afterwards, the average value of the SPM array with the new value is calculated, and the GUI is updated with a new value through a GUI manager.\\
+If we detect a step we look when the previous step was taken and calculate SPM from that, this value is then stored in the array containing the SPM measurements. Afterwards, the average value of the SPM array with the new value is calculated, and the GUI is updated with a new value through a GUI manager.
 
 If no step is taken and more than 2 seconds have passed, the implementation interprets this as if no steps are being taken and the SPM array and GUI is updated with the value 0.
