Some modifications of conclusion

--- a/Content/Conclusion/application.tex
+++ b/Content/Conclusion/application.tex
@@ -1,6 +1,6 @@
 \section{Application}
 %Current State:
-A android application was developed in this project to address the challenges put fourth in \cref{chap:intro}.
+An Android application was developed in this project to address the challenges stated in \Cref{chap:intro}.
 
 %Q1: 
 \begin{center}
