--- a/Report.tex
+++ b/Report.tex
@@ -66,9 +66,10 @@
 
 \chapter{Conclusion}
 \label{chap:conclusion}
+\input{Content/Conclusion/intro}
 \input{Content/Conclusion/application}
 \input{Content/Conclusion/extremeProgramming}
-\input{Content/Conclusion/conclusion}
+%\input{Content/Conclusion/conclusion}
 
 %\clearforchapter
 \appendix	% Appendiks/bilag start - giver chapter bogstaver i stedet for talf
