Corrected section title

--- a/Content/Methodology/XPexplained.tex
+++ b/Content/Methodology/XPexplained.tex
@@ -1,4 +1,4 @@
-\section{Extreme Programming explained}
+\section{Extreme Programming Explained}
 % 2 XP's: 2000 and 200? - differences.
 % General introduction to XP2k
 Extreme Programming (XP) is a software development methodology created by Kent Beck, and this section is based on his book \textit{Extreme Programming Explained (1999)} \citep{xp:explained}. 
