--- a/Content/MusicPlayer/implementation.tex
+++ b/Content/MusicPlayer/implementation.tex
@@ -3,7 +3,7 @@ The Music Player module consists of a number of classes, where to most notable a
 
 \subsection{DynamicQueue}
 \label{sec:dynamicQueue}
-This class is named based on the fact that it will update dynamically, depending on the runnin speed of the user.
+This class is named based on the fact that it will update dynamically, depending on the pace of the user.
 
 \subsection{MusicPlayerActivity}
 This is the central point of the application, responsible for managing the rest of the application and giving the user a way of interacting with it. Is starts the \texttt{MusicPlayerService}, calls the \texttt{DynamicQueue} for songs to play, attaches listeners to the buttons, making them clickable, and it checks that there are enough songs in the specified folder, sending the user to the settings menu if this is not the case.
