--- a/Content/TactileInterface/implementation.tex
+++ b/Content/TactileInterface/implementation.tex
@@ -1,22 +1,24 @@
 \section{Implementation}
-\subsection{Turning off the Screen}
-The implementation of when the screen is turned of, is a pseudo-implementation. On stock Android we found that it is not possible to keep the Android listener running, when the screen is turned off by for example the power button. If this functionality should truly have been implemented, the phone would need to be rooted.
+%\subsection{Turning off the Screen}
+The implementation of when the screen is turned of, is a pseudo-implementation. On stock Android we found that it is not possible to keep the Android listener running, when the screen is turned off by for example the power button. If this functionality should truly have been implemented, the phone would need to be rooted. 
 
-In the current implementation the screen is made to look dark by creating a completely opaque overlay. The NGUI can be activated by pressing the menu button on the Android device. After the overlay is activated, the screen turns dark, and the application starts handling taps in a custom manner as described in \Cref{subsec:handleTaps}.
+In the current implementation the screen is made to look dark by creating a completely opaque overlay. The NGUI can be activated by pressing the menu button on the Android device. After the overlay is activated, the screen turns dark, and the application starts handling taps in a custom manner as described in \Cref{subsec:handleTaps}. Two classes are involved the in implementation of the NGUI: 
+\begin{itemize}
+\item \texttt{ControlInterfaceView}, the dark view responsible for handling touch events.
+\item \texttt{TapCounter}, counts taps and call the corresponding method, e.g. one tap is for \texttt{pause/play}.
+\end{itemize}
 
-The overlay, and thus our custom handling of taps, can be deactivated by touching the home button again after which the opaque overlay is removed.
+
+The overlay, and thus our custom handling of taps, can be deactivated by touching the back button again after which the opaque overlay is removed.
 
 \subsection{Handling of Taps}\label{subsec:handleTaps}
 %tap listener
 %on click increment
-The detection of taps is done by listeners provided by the Android platform. Two types of taps are handled, others are ignored. The two types are: when a finger taps once and not a fling for example, and when a long tap is performed, for example holding one's finger on the screen for 200 ms. When a finger taps once, a method called \texttt{increment()} is called.
+The detection of taps is done by listeners provided by the Android platform. Two types of taps are handled. The two types are: single tap, which is when the screen is touched for a brief period and long press, which is when the screen is touched for more than 500 ms. Long press is solely used for the \texttt{stop} while single tap used for \texttt{play}, \texttt{pause}, \texttt{next}, and \texttt{previous}. Single tap calls a increment method on the \texttt{TapCounter} class.
 
 %time counter - 500 ms - no standard - decided
-The method does two important things: it increments a global tap counter and it starts a timer. The timer runs in the background which enables new taps to occur. Every time within 500 ms a tap occurs, the global counter is incremented. After the time has passed, a method, \texttt{doTapAction()} is called with the accumulated number of taps as a parameter. The method then decides whether to play, pause etc. and performs the appropriate action. The 500 ms were determined experimentally since we could not find any standard regarding wait times on NGUIs.
+This method does two important things: it increments a global tap counter and it starts a timer. The timer runs in the background which enables new taps to occur. Every time within 500 ms a tap occurs, the global counter is incremented. After the time has passed, a method, \texttt{doTapAction()} is called with the accumulated number of taps as a parameter. The method then decides whether to play, pause etc. and performs the appropriate action. The 500 ms were determined experimentally.
 
 %reset counter
 %types captured - longpress = ??
 After an action has been performed, the global tap counter is reset and everything goes back to the state it was in at first. The application is ready for a new action.
-
-%long press exception
-The exception is the long press. When the long press is performed, the music is stopped immediately since there is no need to detect more than one successive long press.
