Some more to xp adaptation

--- a/Content/Methodology/modificationsOfXP.tex
+++ b/Content/Methodology/modificationsOfXP.tex
@@ -58,37 +58,33 @@ In place of the on-site customer we will acts as our own surrogate customer.
 This means that we are responsible for the priority, requirements decisions, and creating acceptance tests, as well as other tasks normally done by the customer.
 
 \subsection{Pair Programming}
-The practice of Pair Programming is easy to use, but difficult to master.
-When mastered it will generate much higher quality code, 
+To fully utilise the powers of pair programming, we will borrow two sets of monitors, keyboards, and mice.
+We will connect these to our laptops to create two workstations ready for pair programming.
 
-\Alexander{Important practice write much better}
-
-According to Beck, Pair Programming is easy to do, but difficult to master.
-\Alexander{Source}
-To shorten the learning curve, we will program all stories, trivial as well as non-trivial, in pairs.
-For us to do so, we require two workstations dedicated to programming.
-We will borrow two monitors, two keyboards, and two mice, which we will connect to two of our laptops.
-
-This practice should create higher quality code than working alone.
-Because of this, we will start to pair program on non-trivial stories.
-We will then switch partners for each story. 
-
+There exist several versions of how to best pair program, and it is said that ``pair programming is easy to do, but difficult to master''.
+We will try different methods to experience the advantages and disadvantages of the different versions.
 
 \subsection{Planning Game}
-\Alexander{Dont really know what to write here.}
-\Dan{Me neither.}
+Planning is important. It lets you know how fast you work, what to do next,  provides an effective means of communication with the customer, and allows you to quickly respond to changes.
 
+In XP planning happens in multiple stages. There is the release planning and the iteration planning.
+The release planning event is where the customer writes all the user stories, he wants the program to cover.
+The developers then estimate the time it will take to implement the different stories.
+Then the customer prioritises the stories by what should be done first.
+Finally the stories to be done in the release are selected based on project velocity and priority of each story.
+
+The iteration planning event is where the customer selects which of the stories, from the release plan, he wants to be implemented in the upcoming iteration.
+Usually the highest prioritised stories are chosen, but often these are superseded by what stories that was not completely implemented last iteration.
+The customer is asked to chose a number of stories, based on the project velocity, so the developers are not swarmed with work.
+
+developers estimate using planning poker....
+\Alexander{Finish it!}
 
 \subsection{Refactoring}
-We will refactor our program according to the guidelines of Fowler and Beck.
-That means we will strive to write simple and precise code.
-If we encounter any bad smells, we will immediately correct them.
-\Alexander{Source}
-\Alexander{Bullshit? Dont really know what to write here.}
-\Alexander{Important practice write much better}
+\Alexander{Needs to be written}
 
 \subsection{Simple Design}
-
+\Alexander{Needs to be written}
 
 \subsection{Small Releases}
 The purpose of this practice is to reduce the risks when or if changes in the use domain occur.
