--- a/Content/Refactoring/intro.tex
+++ b/Content/Refactoring/intro.tex
@@ -1,1 +1,1 @@
-Refactoring is important in general, and especially in extreme programming. It makes code more readable and as a result, more maintainable. In this chapter, examples of bad smells are given, and examples of how we attempted to remedy them are detailed in actual code samples from the project. Lastly, our thoughts about refactoring in general, and justifiability of the effort spent refactoring are described.\Christoffer{Er det her bare vand?}
+In this project we experimented with refactoring as an scheduled task. The goal of refactoring is to make code more readable and more maintainable. In this chapter, we will cover examples of bad smells we encountered and how we attempted to remedy them.
