--- a/Content/SongScanner/intro.tex
+++ b/Content/SongScanner/intro.tex
@@ -1,3 +1,4 @@
+\Christoffer{generally for chapter: use beats per minute once in the intro, and use BPM for rest of the chapter}
 In this chapter, the development, implementation of the song scanner are described. 
 
 The chapter contains a description of the user stories created, which acted as a basis for the development of the song scanner in regards to the requirements it should fulfil. The interesting aspects of its implementation are also described. 
