Improved explanation of refactoring.

--- a/Content/Methodology/XPexplained.tex
+++ b/Content/Methodology/XPexplained.tex
@@ -52,7 +52,9 @@ The development should be seen as a dialogue between the two developers.
 
 \paragraph{Planning Game} is the event where the customer writes user stories, after which, the developers estimates them according to cost.
 
-\paragraph{Refactoring} is the practice used to identify bad smells in the code, e.g. duplicate code, and improve them.
+\paragraph{Refactoring} is the practice used to improve the internal code without changing the external behaviour.
+In XP bad internal code is referred to as bad smells, e.g. duplicate code.
+
 
 \paragraph{Simple Design} is the best design, and is defined as the easiest that work.
 For it to work, it must pass all unit tests and acceptance tests.
