Finished planning in adaptation.

--- a/Content/Methodology/modificationsOfXP.tex
+++ b/Content/Methodology/modificationsOfXP.tex
@@ -77,8 +77,8 @@ The iteration planning event is where the customer selects which of the stories,
 Usually the highest prioritised stories are chosen, but often these are superseded by what stories that was not completely implemented last iteration.
 The customer is asked to chose a number of stories, based on the project velocity, so the developers are not swarmed with work.
 
-developers estimate using planning poker....
-\Alexander{Finish it!}
+A story can be estimated individually or collaboratively, and both methods have strengths and weaknesses.
+We decided to collaboratively estimate stories, as that approach allows us to use our combined experience to find the right estimation.
 
 \subsection{Refactoring}
 \Alexander{Needs to be written}
